--- a/index.html
+++ b/index.html
@@ -1,85 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
 
-  <!-- ✅ Basic Meta Tags -->
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--   <title>Susheelcoder - Full Stack Developer & Portfolio</title> -->
-  <meta name="description" content="Welcome to Susheelcoder - My personal website & portfolio showcasing my full stack development journey, projects, and skills.">
-  <meta name="keywords" content="susheelcoder, Susheel Coder, Full Stack Developer, Portfolio Website, HTML, CSS, JavaScript, PHP, MySQL, Web Development, Responsive Design, Clean UI">
-  <meta name="author" content="Susheelcoder">
-
-  <!-- ✅ Open Graph (For Social Media like Facebook, LinkedIn) -->
-  <meta property="og:title" content="Susheelcoder - Full Stack Developer & Portfolio">
-  <meta property="og:description" content="Explore my projects, skills, and full stack development journey. Clean UI, responsive design, and modern web development.">
-  <meta property="og:image" content="https://github.com/user-attachments/assets/058c385e-df26-48d5-905b-96e39b54d380">
-  <meta property="og:url" content="https://susheelcoder.netlify.app/">
-  <meta property="og:type" content="website">
-
-  <!-- ✅ Twitter Card (For Twitter/X Sharing) -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Susheelcoder - Full Stack Developer & Portfolio">
-  <meta name="twitter:description" content="Welcome to my personal website & portfolio. Showcasing projects, skills, and full stack development journey.">
-  <meta name="twitter:image" content="https://github.com/user-attachments/assets/058c385e-df26-48d5-905b-96e39b54d380">
-
-  <!-- ✅ Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png">
-
-
-
+  <title>BRAND NAME</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+<style>
+ 
+</style>
+
 <body>
-    
+  <!-- ===   header  === -->
+  <header>
+    <div class="header_left">
+      <h2>BRAND NAME</h2>
+    </div>
+    <div class="header_senter">
+      <ul class="ul">
+        <li class="li">home</li>
+        <li class="li">home</li>
+      </ul>
+    </div>
+    <div class="header_right">
+      <button>Login</button>
+      <button>Admission</button>
+    </div>
+  </header>
 
+  <!-- === section-1 ===  -->
+  <section class="section_1">
+    <div class="section_div">
+      <b class="se-1-b">welcome</b>
+      <br><br><br>
+      <h2 class="se-1-h2">25k+ SUUDENTS TRUST US</h2>
+      <br><br><br>
+      <P class="se-1-p">Find the right instructor for
+        over 10,000 teachers</P>
+      <br><br><br>
+      <button class="se-2-button">Admission</button>
 
+      <button class="se-2-button">Learn More</button>
+    </div>
+     <div class="section_div-2">
 
-
-
-
-<a href="https://susheelcoder.netlify.app/"> <img width="1920" height="1080" alt="White and Green Simple  Professional Business Project Presentation (1)" src="White and Green Simple  Professional Business Project Presentation (5).gif" /> </a>
-
-
-<H1>🌐 susheelcode -Full Stack Developer & Portfolio</H1>
-
-<p>Welcome to <strong>susheelcoder</strong> — my personal website and portfolio!<br>
-This project showcases my work, skills, and full stack development journey.</p>
-
-
-<div  style="background-color: rgb(255, 197, 197)">
-<h3>🚀 Features</h3>
-<ul>
-  <li>Responsive design (mobile & desktop friendly)</li>
-  <li>Clean and modern UI</li>
-  <li>Portfolio section to highlight projects</li>
-  <li>Contact form for easy communication</li>
-  <li>SEO friendly meta setup</li>
-</ul>
-
-
-<h3>🛠️ Tech Stack</h3>
-<ul>
-  <li>HTML</li>
-  <li>CSS</li>
-  <li>PHP</li>
-  <li>MySQL</li>
-  <li>JavaScript</li>
-  <li>GitHub</li>
-  <li>XAMPP</li>
-</ul>
-
-<h3>📬 Contact</h3>
-<p>
-  Website: <a href="https://susheelcoder.netlify.app" target="_blank">https://susheelcoder.netlify.app</a><br>
-  Email: <a href="mailto:techiesusheel@gmail.com">techiesusheel@gmail.com</a>
-</p>
-
-<p>
-  #susheelcoder #WebDevelopment #PortfolioWebsite #HTML5 #CSS3 #JavaScript #ResponsiveDesign #CleanUI #SusheelCoder
-</p>
-
-</div>
-
-    
+     </div>
+  </section>
 </body>
+
 </html>
