--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
 
      </div>
   </section>
-</body>
 
+  <!-- === section-2 === -->
+   <section class="section-2">
+    <div class="se-2-left">
+     <h2>video in live action</h2>
+    </div>
+    <div class="se-2-right">
+
+    </div>
+   </section>
+</body>
 </html>
