--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <style>
- 
+
 </style>
 
 <body>
@@ -43,19 +43,25 @@
 
       <button class="se-2-button">Learn More</button>
     </div>
-     <div class="section_div-2">
+    <div class="section_div-2">
 
-     </div>
+    </div>
   </section>
 
   <!-- === section-2 === -->
-   <section class="section-2">
+  <section class="section-2">
     <div class="se-2-left">
-     <h2>video in live action</h2>
+      <hr>
+      <h2>Video in Live Action</h2>
+      <p>Problems trying to resolve the conflict between
+        the two major realms of Classical physics:
+        Newtonian mechanics </p>
+        <a href="">Learn More -></a>
     </div>
     <div class="se-2-right">
-
+      <iframe src="https://youtu.be/wLGL61iwo7k?si=JRb-7dl95X3oOOlq" frameborder="1"></iframe>
     </div>
-   </section>
+  </section>
 </body>
+
 </html>
