--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <style>
-
+.section-2{
+  margin: auto;
+}
 </style>
 
 <body>
@@ -64,7 +66,7 @@
   </section>
 
 
-  
+
 </body>
 
 </html>
