--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <style>
 .section-2{
+  padding: 30px;
+  display: flex;
   margin: auto;
 }
 </style>
@@ -53,7 +55,8 @@
   <!-- === section-2 === -->
   <section class="section-2">
     <div class="se-2-left">
-      <hr>
+      <hr style="width: 40px;">
+      <br><br>
       <h2>Video in Live Action</h2>
       <p>Problems trying to resolve the conflict between
         the two major realms of Classical physics:
