--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <style>
-.section-2{
-  padding: 30px;
-  display: flex;
-  margin: auto;
-}
+ 
 </style>
 
 <body>
@@ -55,17 +51,25 @@
   <!-- === section-2 === -->
   <section class="section-2">
     <div class="se-2-left">
-      <hr style="width: 40px;">
-      <br><br>
-      <h2>Video in Live Action</h2>
-      <br><br>
-      <p>Problems trying to resolve the conflict between
+      <br><br><br><br>
+      <hr class="se-2-hr">
+      <br><br><br><br>
+      <h2 class="se-2-h2">Video in Live Action</h2>
+      <br><br><br>
+      <p class="se-2-p">Problems trying to resolve the conflict between
         the two major realms of Classical physics:
         Newtonian mechanics </p>
-        <a href="">Learn More -></a>
+      <br><br><br>
+      <a href="">Learn More > </a>
     </div>
     <div class="se-2-right">
-      <iframe src="https://youtu.be/wLGL61iwo7k?si=JRb-7dl95X3oOOlq" frameborder="1"></iframe>
+      <!-- Simple iframe -->
+      <iframe class="sec-2-video" width="560" height="315" src="https://www.youtube.com/embed/Pp1gVYWcW24"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+        loading="lazy">
+      </iframe>
+
     </div>
   </section>
 
