--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
     </div>
   </section>
 
-
+  <!-- === section-3  === -->
+   <section class="section-3">
+    
+   </section>
+  
 
 </body>
 
