--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <style>
- 
+
 </style>
 
 <body>
@@ -74,10 +74,32 @@
   </section>
 
   <!-- === section-3  === -->
-   <section class="section-3">
-    
-   </section>
-  
+  <hr>
+  <section class="section-3">
+    <div class="se-3-top">
+      <b>Practice Advice</b>
+      <br><br>
+      <h2>Get Quality Education</h2>
+      <br><br>
+      <p>Problems trying to resolve the conflict between
+        <br> the two major realms of Classical physics: Newtonian mechanics
+      </p>
+    </div>
+    <div class="se-3-buttom">
+      <div class="1">
+        <img src="" alt="">
+      </div>
+      <div class="2">
+        <img src="" alt="">
+      </div>
+      <div class="3">
+        <div class="4">
+          <img src="" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 </body>
 
