--- a/index.html
+++ b/index.html
@@ -87,15 +87,16 @@
     </div>
     <div class="se-3-buttom">
       <div class="1">
-        <img src="" alt="">
+        <img src="img/1.png" alt="">
       </div>
       <div class="2">
-        <img src="" alt="">
+        <img src="img/1.png" alt="">
       </div>
       <div class="3">
-        <div class="4">
-          <img src="" alt="">
-        </div>
+
+      </div>
+      <div class="4">
+        <img src="img/1.png" alt="">
       </div>
     </div>
   </section>
