--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <style>
-
+.se-3-img{
+  width: 200px;
+}
 </style>
 
 <body>
@@ -87,16 +89,16 @@
     </div>
     <div class="se-3-buttom">
       <div class="1">
-        <img src="img/1.png" alt="">
+        <img class="se-3-img" src="img/1.png" alt="">
       </div>
       <div class="2">
-        <img src="img/1.png" alt="">
+        <img class="se-3-img" src="img/1.png" alt="">
       </div>
       <div class="3">
-
+        <img class="se-3-img" src="img/1.png" alt="">
       </div>
       <div class="4">
-        <img src="img/1.png" alt="">
+        <img class="se-3-img" src="img/1.png" alt="">
       </div>
     </div>
   </section>
