--- a/index.html
+++ b/index.html
@@ -8,45 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <style>
-  .section-3 {
-    margin: 80px 0;
-  }
 
-  .se-3-b {
-    font-size: 20px;
-  }
-
-  .se-3-h2 {
-    font-size: 45px;
-  }
-
-  .se-3-p {
-    margin-bottom: 50px;
-  }
-
-  .se-3-buttom {
-    display: flex;
-  }
-
-  .a1,
-  .a3 {
-    margin: 70px 40px;
-    background-color: aqua;
-  }
-  .a2,
-  .a4 {
-    background-color: rgb(216, 216, 216);
-  }
-
-  .se-3-img {
-    width: 280px;
-    height: 255px;
-  }
-
-  .se-3-hr {
-    width: 50px;
-    background-color: rgb(0, 0, 0);
-  }
 </style>
 
 <body>
@@ -125,36 +87,44 @@
     </div>
     <div class="se-3-buttom">
       <div class="a1">
-        <img class="se-3-img" src="img/1.png" alt="">
-        <br>
-        <h3>Toddlers</h3>
-        <br>
-        <hr class="se-3-hr"><br>
-        <p>Children age 1.5 to 2.5 Years.</p>
+        <div class="b1">
+          <img class="se-3-img" src="img/1.png" alt="">
+          <br>
+          <h3>Toddlers</h3>
+          <br>
+          <hr class="se-3-hr"><br>
+          <p>Children age 1.5 to 2.5 Years.</p>
+        </div>
       </div>
       <div class="a2">
-        <img class="se-3-img" src="img/1.png" alt="">
-        <br>
-        <h3>Montessori </h3>
-        <br>
-        <hr class="se-3-hr"><br>
-        <p>Children age 2.5 to 6.5 Years</p>
+        <div class="b2">
+          <img class="se-3-img" src="img/1.png" alt="">
+          <br>
+          <h3>Montessori </h3>
+          <br>
+          <hr class="se-3-hr"><br>
+          <p>Children age 2.5 to 6.5 Years</p>
+        </div>
       </div>
       <div class="a3">
-        <img class="se-3-img" src="img/1.png" alt="">
-        <br>
-        <h3>Respite Care</h3>
-        <br>
-        <hr class="se-3-hr"><br>
-        <p>Children with additional needs age 3 to 10 years</p>
+        <div class="b3">
+          <img class="se-3-img" src="img/1.png" alt="">
+          <br>
+          <h3>Respite Care</h3>
+          <br>
+          <hr class="se-3-hr"><br>
+          <p>Children with additional needs age 3 to 10 years</p>
+        </div>
       </div>
       <div class="a4">
-        <img class="se-3-img" src="img/1.png" alt="">
-        <br>
-        <h3>Cafeteria </h3>
-        <br>
-        <hr class="se-3-hr"><br>
-        <p>Healthy food served to parents, family and friends all day.</p>
+        <div class="b4">
+          <img class="se-3-img" src="img/1.png" alt="">
+          <br>
+          <h3>Cafeteria </h3>
+          <br>
+          <hr class="se-3-hr"><br>
+          <p>Healthy food served to parents, family and friends all day.</p>
+        </div>
       </div>
     </div>
   </section>
