--- a/index.html
+++ b/index.html
@@ -130,6 +130,15 @@
   </section>
 
 
+  <!-- ===  section-4  === -->
+   <hr>
+   <section class="section-4">
+
+   </section>
+
+   <!-- ===  section-5  === -->
+    <hr>
+
 </body>
 
 </html>
