--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <div class="header_senter">
       <ul class="ul">
         <li class="li">home</li>
-        <li class="li">home</li>
+        <li class="li">about</li>
+        <li class="li">project</li>
       </ul>
     </div>
     <div class="header_right">
