--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <style>
 
+
 </style>
 
 <body>
@@ -132,16 +133,45 @@
 
 
   <!-- ===  section-4  === -->
-   <hr>
-   <section class="section-4">
+  <hr>
+  <section class="section-4">
 
-   </section>
+  </section>
 
-   <!-- ===  section-5  === -->
-    <hr>
-    <section class="section-5">
-      
-    </section>
+  <!-- ===  section-5  === -->
+  <hr>
+  <section class="section-5">
+    <div class="se-5-up">
+      <b>Testimonials</b>
+      <h2>Video in Live Action</h2>
+      <p>Problems trying to resolve the conflict between
+       <br> the two major realms of Classical physics: Newtonian mechanics </p>
+    </div>
+
+    <div class="se-5-down">
+      <div class="do-1">
+        <h3>What Parents Think</h3>
+        <p>“I'm a testimonial. Click to edit me and add text that says something nice about you and your services. Let
+          your customers review you and tell their friends how great you are."</p>
+        <b>Edgar's dad</b>
+      </div>
+
+      <div class="do-2">
+        <h3>What Parents Think</h3>
+        <p>“I'm a testimonial. Click to edit me and add text that says something nice about you and your services. Let
+          your customers review you and tell their friends how great you are."</p>
+        <b>Edgar's dad</b>
+
+      </div>
+            <div class="do-2">
+        <h3>What Parents Think</h3>
+        <p>“I'm a testimonial. Click to edit me and add text that says something nice about you and your services. Let
+          your customers review you and tell their friends how great you are."</p>
+        <b>Edgar's dad</b>
+
+      </div>
+    </div>
+  </section>
 
 </body>
 
