--- a/index.html
+++ b/index.html
@@ -1,178 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BRAND NAME</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-<style>
-
-
-</style>
-
 <body>
-  <!-- ===   header  === -->
-  <header>
-    <div class="header_left">
-      <h2>BRAND NAME</h2>
-    </div>
-    <div class="header_senter">
-      <ul class="ul">
-        <li class="li">home</li>
-        <li class="li">about</li>
-        <li class="li">project</li>
-      </ul>
-    </div>
-    <div class="header_right">
-      <button>Login</button>
-      <button>Admission</button>
-    </div>
-  </header>
-
-  <!-- === section-1 ===  -->
-  <section class="section_1">
-    <div class="section_div">
-      <b class="se-1-b">welcome</b>
-      <br><br><br>
-      <h2 class="se-1-h2">25k+ SUUDENTS TRUST US</h2>
-      <br><br><br>
-      <P class="se-1-p">Find the right instructor for
-        over 10,000 teachers</P>
-      <br><br><br>
-      <button class="se-2-button">Admission</button>
-
-      <button class="se-2-button">Learn More</button>
-    </div>
-    <div class="section_div-2">
-
-    </div>
-  </section>
-
-  <!-- === section-2 === -->
-  <section class="section-2">
-    <div class="se-2-left">
-      <br><br><br><br>
-      <hr class="se-2-hr">
-      <br><br><br><br>
-      <h2 class="se-2-h2">Video in Live Action</h2>
-      <br><br><br>
-      <p class="se-2-p">Problems trying to resolve the conflict between
-        the two major realms of Classical physics:
-        Newtonian mechanics </p>
-      <br><br><br>
-      <a href="">Learn More > </a>
-    </div>
-    <div class="se-2-right">
-      <!-- Simple iframe -->
-      <iframe class="sec-2-video" width="560" height="315" src="https://www.youtube.com/embed/Pp1gVYWcW24"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
-        loading="lazy">
-      </iframe>
-
-    </div>
-  </section>
-
-  <!-- === section-3  === -->
-  <hr>
-  <section class="section-3">
-    <div class="se-3-top">
-      <b class="se-3-b">Practice Advice</b>
-      <br><br>
-      <h2 class="se-3-h2">Get Quality Education</h2>
-      <br><br>
-      <p class="se-3-p">Problems trying to resolve the conflict between
-        <br> the two major realms of Classical physics: Newtonian mechanics
-      </p>
-    </div>
-    <div class="se-3-buttom">
-      <div class="a1">
-        <div class="b1">
-          <img class="se-3-img" src="img/1.png" alt="">
-          <br>
-          <h3>Toddlers</h3>
-          <br>
-          <hr class="se-3-hr"><br>
-          <p>Children age 1.5 to 2.5 Years.</p>
-        </div>
-      </div>
-      <div class="a2">
-        <div class="b2">
-          <img class="se-3-img" src="img/1.png" alt="">
-          <br>
-          <h3>Montessori </h3>
-          <br>
-          <hr class="se-3-hr"><br>
-          <p>Children age 2.5 to 6.5 Years</p>
-        </div>
-      </div>
-      <div class="a3">
-        <div class="b3">
-          <img class="se-3-img" src="img/1.png" alt="">
-          <br>
-          <h3>Respite Care</h3>
-          <br>
-          <hr class="se-3-hr"><br>
-          <p>Children with additional needs age 3 to 10 years</p>
-        </div>
-      </div>
-      <div class="a4">
-        <div class="b4">
-          <img class="se-3-img" src="img/1.png" alt="">
-          <br>
-          <h3>Cafeteria </h3>
-          <br>
-          <hr class="se-3-hr"><br>
-          <p>Healthy food served to parents, family and friends all day.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-  <!-- ===  section-4  === -->
-  <hr>
-  <section class="section-4">
-
-  </section>
-
-  <!-- ===  section-5  === -->
-  <hr>
-  <section class="section-5">
-    <div class="se-5-up">
-      <b>Testimonials</b>
-      <h2>Video in Live Action</h2>
-      <p>Problems trying to resolve the conflict between
-       <br> the two major realms of Classical physics: Newtonian mechanics </p>
-    </div>
-
-    <div class="se-5-down">
-      <div class="do-1">
-        <h3>What Parents Think</h3>
-        <p>“I'm a testimonial. Click to edit me and add text that says something nice about you and your services. Let
-          your customers review you and tell their friends how great you are."</p>
-        <b>Edgar's dad</b>
-      </div>
-
-      <div class="do-2">
-        <h3>What Parents Think</h3>
-        <p>“I'm a testimonial. Click to edit me and add text that says something nice about you and your services. Let
-          your customers review you and tell their friends how great you are."</p>
-        <b>Edgar's dad</b>
-
-      </div>
-            <div class="do-2">
-        <h3>What Parents Think</h3>
-        <p>“I'm a testimonial. Click to edit me and add text that says something nice about you and your services. Let
-          your customers review you and tell their friends how great you are."</p>
-        <b>Edgar's dad</b>
-
-      </div>
-    </div>
-  </section>
-
+    
 </body>
-
 </html>
