--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>School name</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header class="header">
+        <div class="header-left">
+            <h2 class="header-h2">Day Care Services</h2>
+        </div>
+        <div class="header-senter">
+            <ul class="header-ul">
+                <li><a href="Home">Home</a></li>
+                <li><a href="About ">About </a></li>
+                <li><a href="program">program</a></li>
+                <li><a href="Admission">Admission</a></li>
+                <li><a href="Admission">Admission</a></li>
+                <li><a href="Contact">Admission</a></li>
+            </ul>
+        </div>
+        <div class="right">
+            <button class="header-button" type="submit">Enroll now</button>
+        </div>
+    </header>
+
 </body>
+
 </html>
