--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
         </div>
     </header>
 
+    <!-- men -->
+    <menu>
+
+    </menu>
+
+    <!-- section-1 -->
+    <section class="section-1">
+
+    </section>
+
 </body>
 
 </html>
