--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
     <!-- men -->
     <menu>
-
+      
     </menu>
 
-    <!-- section-1 -->
+    <!-- section-1   - About-->
     <section class="section-1">
 
     </section>
