--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     </header>
 
     <!-- men -->
-    <menu>
+    <men class="men">
       
-    </menu>
+    </men>
 
     <!-- section-1   - About-->
     <section class="section-1">
