--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>School name</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style-.css">
+    <link rel="stylesheet" href="style-1.css">
 </head>
 
 <body>
@@ -31,11 +31,37 @@
 
     <!-- men -->
     <men class="men">
-      
+        <div class="men-left">
+            <p>Play. explore. learn.</p>
+            <h1>A safe and joyful place for your lovely children</h1>
+            <p>Donec scelerisque neque integer nulla habitant nec sem nam bibendum arcu rhoncus in consequat.</p>
+            <div class="b">
+                <button>Enroll your kid</button>
+                ***** 4.8/5
+                <p> 4.8 rating on Google</p>
+            </div>
+            <a href="">(123) 456-7890</a>
+        </div>
+        <div class="men-right">
+            <img class="men-img1" src="img/1.png" alt="">
+            <img class="men-img2" src="img/1.png" alt="">
+
+        </div>
     </men>
 
-    <!-- section-1   - About-->
+    <!-- section-1 - About-->
     <section class="section-1">
+        <div class="section-1-right">
+            <h6>About our</h6>
+            <h2>We are here to help parents raise happy and healthy children</h2>
+            <p>Aliquam rhoncus mauris, convallis volutpat velit bibendum dui duis ut vulputate amet, ac ipsum nisl convallis ut.</p>
+            <p>Pulvinar ultrices porta mattis quis lobortis est facilisis purus nunc, sed semper enim dictum sed donec condimentum sodales sed non vel malesuada morbi arcu justo, pretium sagittis hac nisi amet, fermentum nunc.</p>
+            <button>known more about us</button>
+        </div>
+        <div class="section-1-left">
+            <img src="img/1.png" alt="">
+        </div>
+
 
     </section>
 
