--- a/index.html
+++ b/index.html
@@ -10,92 +10,7 @@
 </head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <style>
-  .section-1 {
-    display: flex;
-    justify-content: space-between;
-    gap: 40px;
-    flex-wrap: wrap;
-  }
-
-  .section-1-left {
-    flex: 1;
-    min-width: 400px;
-  }
-
-  .section-1-left img {
-    width: 600px;
-    height: 600px;
-    object-fit: cover;
-    border-radius: 20px;
-    display: block;
-    max-width: 100%;
-  }
-
-  .section-1-right {
-    flex: 1;
-    min-width: 280px;
-    padding:0 40px;
-    margin: 0 30px;
-
-  }
-
-  .section-1-right b {
-    color: #000000;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-size: 14px;
-  }
-
-  .section-1-right h2 {
-    margin-top: 20px;
-    font-size: 3.5rem;
-    /* margin: 15px 0px; */
-    color: #333;
-    line-height: 1.3;
-  }
-
-  .section-1-right p {
-    margin-top: 20px;
-    color: #555555ab;
-    font-size: 19px;
-    line-height: 2.4;
-    margin-bottom: 20px;
-  }
-
-  .section-1-right button {
-    color: #000000;
-    padding: 13px 34px;
-    border-radius: 30px;
-    cursor: pointer;
-    font-size: 19px;
-    transition: background 0.3s;
-  }
-
-  .section-1-right button:hover {
-    background: #8ee356;
-  }
-
-
-  @media (max-width: 768px) {
-    .section-1 {
-      flex-direction: column;
-      text-align: center;
-    }
-
-    .section-1-left,
-    .section-1-right {
-      min-width: 100%;
-    }
-
-    .section-1-left img {
-      width: 100%;
-      height: auto;
-    }
-
-    .section-1-right {
-      margin-top: 20px;
-    }
-  }
+ 
 </style>
 
 <body>
@@ -162,6 +77,20 @@
     </div>
   </section>
 
+  <!-- ===  section-2  === -->
+  <section class="section-2">
+    <div class="section-2-left">
+      <img class="section-2-img" src="img/1.png" alt="">
+    </div>
+    <div class="section-2-right">
+      <i>''</i>
+      <h3>Tortor platea nunc lorem morbi pellentesque sed enim viverra venenatis, sem pellentesque massa nunc quis
+        lectus.</h3>
+      <img src="img/2.png" alt="" class="signechar-img">
+      <b>Yolanda Jenkins</b>
+      <p>Founder & Head of School</p>
+    </div>
+  </section>
 
 </body>
 
