--- a/index.html
+++ b/index.html
@@ -4,94 +4,126 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>School name</title>
+  <title>School Name</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="style-1.css">
 </head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <style>
- 
+
 </style>
 
 <body>
-  <!--===  header  ===-->
-  <header class="header">
-    <div class="header-left">
-      <h2 class="header-h2">Day Care Services</h2>
-    </div>
-    <div class="header-senter">
-      <ul class="header-ul">
-        <li><a href="Home">Home</a></li>
-        <li><a href="About ">About </a></li>
-        <li><a href="program">program</a></li>
-        <li><a href="Admission">Admission</a></li>
-        <li><a href="Admission">Admission</a></li>
-        <li><a href="Contact">Admission</a></li>
-      </ul>
-    </div>
-    <div class="right">
-      <button class="header-button" type="submit">Enroll now</button>
-    </div>
-  </header>
+  <section class="section-men">
+    <!--===  header  ===-->
+    <header class="header">
+      <div class="header-left">
+        <h2 class="header-h2">School Name</h2>
+      </div>
+      <div class="header-senter">
+        <ul class="header-ul">
+          <li><a href="Home">Home</a></li>
+          <li><a href="About ">About </a></li>
+          <li><a href="program">program</a></li>
+          <li><a href="Admission">Admission</a></li>
+          <li><a href="Admission">Admission</a></li>
+          <li><a href="Contact">Admission</a></li>
+        </ul>
+      </div>
+      <div class="right">
+        <button class="header-button" type="submit">Enroll now</button>
+      </div>
+    </header>
 
-  <!--===  men  ===-->
-  <men class="men">
-    <div class="men-left">
-      <p>Play. explore. learn.</p>
-      <h1>A safe and joyful place for your lovely children</h1>
-      <p>Donec scelerisque neque integer nulla habitant nec sem nam bibendum arcu rhoncus in consequat.</p>
-      <div class="b">
-        <button>Enroll your kid</button>
-        <div class="rating">
-          <span class="stars">★★★★★</span>
-          <p class="source">4.8 rating on Google</p>
+    <!--===  men  ===-->
+    <men class="men">
+      <div class="men-left">
+        <p>Play. explore. learn.</p>
+        <h1>A safe and joyful place for your lovely children</h1>
+        <p>Donec scelerisque neque integer nulla habitant nec sem nam bibendum arcu rhoncus in consequat.</p>
+        <div class="b">
+          <button>Enroll your kid</button>
+          <div class="rating">
+            <span class="stars">★★★★★</span>
+            <p class="source">4.8 rating on Google</p>
+          </div>
+        </div>
+        <hr class="men-hr">
+        <a href="tel:1234567890" class="call-link">
+          <i class="fa-solid fa-phone"></i>
+          (123) 456-7890
+        </a>
+      </div>
+      <div class="men-right">
+        <img class="men-img1" src="img/1.png" alt="">
+        <img class="men-img2" src="img/1.png" alt="">
+      </div>
+    </men>
+  </section>
+  <!-- ==================================== -->
+  <div class="page-section">
+    <!--=== section-1 - About  ===-->
+    <section class="section-1">
+      <div class="section-1-left">
+        <img src="img/2.png" alt="">
+      </div>
+      <div class="section-1-right">
+        <b>About us</b>
+        <h2>We are here to help parents raise happy and healthy children</h2>
+        <p>
+          Aliquam rhoncus mauris, convallis volutpat velit bibendum dui duis ut vulputate amet,
+          ac ipsum nisl convallis ut. Pulvinar ultrices porta mattis quis lobortis est facilisis
+          purus nunc, sed semper enim dictum sed donec condimentum sodales sed non vel malesuada
+          morbi arcu justo, pretium sagittis hac nisi amet, fermentum nunc.
+        </p>
+        <button>Know more about us</button>
+      </div>
+    </section>
+
+    <!-- ===  section-2  === -->
+    <section class="section-2">
+      <div class="section-2-left">
+        <img class="section-2-img" src="img/1.png" alt="">
+      </div>
+      <div class="section-2-right">
+        <i>''</i>
+        <h3>Tortor platea nunc lorem morbi pellentesque sed enim viverra venenatis, sem pellentesque massa nunc quis
+          lectus.</h3>
+        <img src="img/2.png" alt="" class="signechar-img">
+        <b>Yolanda Jenkins</b>
+        <p>Founder & Head of School</p>
+      </div>
+    </section>
+
+    <!-- ===  section-3  === -->
+    <section class="section-3">
+      <div class="section-3-up">
+        <b>Day care Options</b>
+        <h2>Age-specific support for every stage</h2>
+      </div>
+      <div class="section-3-down">
+        <div class="down-1">
+          <img src="img/1.png" alt="">
+          <h3>Infant</h3>
+          <p>Blandit auctor felis habitasse aliquet est potenti ut urna eget orci pellentesque commodo vitae in sem</p>
+          <a href="">Learn more</a>
+        </div>
+        <div class="down-2">
+          <img src="img/1.png" alt="">
+          <h3>Infant</h3>
+          <p>Blandit auctor felis habitasse aliquet est potenti ut urna eget orci pellentesque commodo vitae in sem</p>
+          <a href="">Learn more</a>
+        </div>
+        <div class="down-3">
+          <img src="img/1.png" alt="">
+          <h3>Infant</h3>
+          <p>Blandit auctor felis habitasse aliquet est potenti ut urna eget orci pellentesque commodo vitae in sem</p>
+          <a href="">Learn more</a>
         </div>
       </div>
-      <hr class="men-hr">
-      <a href="tel:1234567890" class="call-link">
-        <i class="fa-solid fa-phone"></i>
-        (123) 456-7890
-      </a>
-    </div>
-    <div class="men-right">
-      <img class="men-img1" src="img/1.png" alt="">
-      <img class="men-img2" src="img/1.png" alt="">
-    </div>
-  </men>
+    </section>
 
-  <!--=== section-1 - About  ===-->
-  <section class="section-1">
-    <div class="section-1-left">
-      <img src="img/2.png" alt="">
-    </div>
-    <div class="section-1-right">
-      <b>About us</b>
-      <h2>We are here to help parents raise happy and healthy children</h2>
-      <p>
-        Aliquam rhoncus mauris, convallis volutpat velit bibendum dui duis ut vulputate amet,
-        ac ipsum nisl convallis ut. Pulvinar ultrices porta mattis quis lobortis est facilisis
-        purus nunc, sed semper enim dictum sed donec condimentum sodales sed non vel malesuada
-        morbi arcu justo, pretium sagittis hac nisi amet, fermentum nunc.
-      </p>
-      <button>Know more about us</button>
-    </div>
-  </section>
-
-  <!-- ===  section-2  === -->
-  <section class="section-2">
-    <div class="section-2-left">
-      <img class="section-2-img" src="img/1.png" alt="">
-    </div>
-    <div class="section-2-right">
-      <i>''</i>
-      <h3>Tortor platea nunc lorem morbi pellentesque sed enim viverra venenatis, sem pellentesque massa nunc quis
-        lectus.</h3>
-      <img src="img/2.png" alt="" class="signechar-img">
-      <b>Yolanda Jenkins</b>
-      <p>Founder & Head of School</p>
-    </div>
-  </section>
-
+  </div>
 </body>
 
 </html>
