--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </style>
 
 <body>
-  <section class="section-men">
+  <section class="section-men" id="home">
     <!--===  header  ===-->
     <header class="header">
       <div class="header-left">
@@ -22,8 +22,8 @@
       </div>
       <div class="header-senter">
         <ul class="header-ul">
-          <li><a href="Home">Home</a></li>
-          <li><a href="About ">About </a></li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about ">About </a></li>
           <li><a href="program">program</a></li>
           <li><a href="Admission">Admission</a></li>
           <li><a href="Admission">Admission</a></li>
@@ -60,8 +60,8 @@
       </div>
     </men>
   </section>
-  <!-- ==================================== -->
-  <div class="page-section">
+  <!-- ================= #about =================== -->
+  <div class="page-section" id="about">
     <!--=== section-1 - About  ===-->
     <section class="section-1">
       <div class="section-1-left">
