--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>
 
     <!--===  men  ===-->
-    <men class="men">
+    <menu class="men">
       <div class="men-left">
         <p>Play. explore. learn.</p>
         <h1>A safe and joyful place for your lovely children</h1>
@@ -58,7 +58,7 @@
         <img class="men-img1" src="img/1.png" alt="">
         <img class="men-img2" src="img/1.png" alt="">
       </div>
-    </men>
+    </menu>
   </section>
   <!-- ================= #about =================== -->
   <div class="page-section" id="about">
