--- a/index.html
+++ b/index.html
@@ -203,8 +203,46 @@
 
     <!--===  section-5  ===-->
     <section class="section-5">
-      
+      <div class="section-5-left">
+        <b>Why us</b>
+        <h2>The best early learning experience</h2>
+        <p>Fermentum nunc tortor, mauris lorem dignissim augue et vestibulum aliquet est ultrices mauris adipiscing.</p>
+        <ul>
+          <li>Holistic approach</li>
+          <li>Passionate teachers</li>
+          <li>Supervision to keep children</li>
+        </ul>
+        <button>Know more</button>
+      </div>
+      <div class="section-5-right">
+        <div class="se-5-right-box1 ">
+          <b>❤️</b>
+          <h3>Kindness</h3>
+          <p>Nibh in sed venenatis, senectus fermentum nullam donec nulla quis ut facilisis</p>
+        </div>
+        <div class="se-5-right-box2">
+          <b>❤️</b>
+          <h3>Kindness</h3>
+          <p>Nibh in sed venenatis, senectus fermentum nullam donec nulla quis ut facilisis</p>
+        </div>
+        <div class="se-5-right-box3 ">
+          <b>❤️</b>
+          <h3>Kindness</h3>
+          <p>Nibh in sed venenatis, senectus fermentum nullam donec nulla quis ut facilisis</p>
+        </div>
+        <div class="se-5-right-box4">
+          <b>❤️</b>
+          <h3>Kindness</h3>
+          <p>Nibh in sed venenatis, senectus fermentum nullam donec nulla quis ut facilisis</p>
+        </div>
+      </div>
     </section>
+
+    <!-- ===  section-6  === -->
+     <section class="section-6">
+
+      
+     </section>
   </div>
 </body>
 
