--- a/index.html
+++ b/index.html
@@ -19,6 +19,47 @@
 
 <style>
 
+  .section-7 {
+    margin-top: 50px;
+    padding: 60px 20px;
+    background-color: #f9f9f9;
+    font-family: 'Outfit', sans-serif;
+  }
+
+  .section-7-up {
+    text-align: center;
+    margin-bottom: 40px;
+  }
+
+  .section-7-up b {
+    font-size: 1rem;
+    color: #000000;
+    letter-spacing: 1.2px;
+    display: block;
+    margin-bottom: 19px;
+  }
+
+  .section-7-up h2 {
+    padding: 0 280px;
+    font-size: 3.6rem;
+    color: #333;
+    margin: 22px  0  22px  0;
+  }
+
+  .section-7-down {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .section-7-down iframe {
+    width: 100%;
+    min-width: 700px;
+    aspect-ratio: 16 / 9;
+    border: none;
+    border-radius: 24px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  }
 </style>
 
 <body>
@@ -67,8 +108,10 @@
       </div>
     </men>
   </section>
+
   <!-- ================= #about =================== -->
   <div class="page-section" id="about">
+
     <!--=== section-1 - About  ===-->
     <section class="section-1">
       <div class="section-1-left">
@@ -239,10 +282,28 @@
     </section>
 
     <!-- ===  section-6  === -->
-     <section class="section-6">
+    <section class="section-6">
+      <div class="section-6-up">
+        <img class="img-up-1" src="img/1.png" alt="">
+        <img class="img-up-2" src="img/2.png" alt="">
+        <img class="img-up-2" src="img/2.png" alt="">
+      </div>
+      <div class="section-6-down">
+        <img class="img-down-2" src="img/2.png" alt="">
+        <img class="img-down-2" src="img/2.png" alt="">
+        <img class="img-down-1" src="img/1.png" alt="">
+      </div>
+    </section>
 
-      
-     </section>
+    <!-- ===  section-7  === -->
+    <section class="section-7">
+      <div class="section-7-up">
+        <b>Daily activities</b>
+        <h2>Designed to help children realize their potential</h2>
+      </div>
+      <div class="section-7-down">
+        <iframe src="https://www.youtube.com/embed/XHOmBV4js_E" frameborder="0" allowfullscreen></iframe>
+    </section>
   </div>
 </body>
 
