--- a/index.html
+++ b/index.html
@@ -16,50 +16,11 @@
 </head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 
 <style>
-
-  .section-7 {
-    margin-top: 50px;
-    padding: 60px 20px;
-    background-color: #f9f9f9;
-    font-family: 'Outfit', sans-serif;
-  }
-
-  .section-7-up {
-    text-align: center;
-    margin-bottom: 40px;
-  }
-
-  .section-7-up b {
-    font-size: 1rem;
-    color: #000000;
-    letter-spacing: 1.2px;
-    display: block;
-    margin-bottom: 19px;
-  }
-
-  .section-7-up h2 {
-    padding: 0 280px;
-    font-size: 3.6rem;
-    color: #333;
-    margin: 22px  0  22px  0;
-  }
-
-  .section-7-down {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .section-7-down iframe {
-    width: 100%;
-    min-width: 700px;
-    aspect-ratio: 16 / 9;
-    border: none;
-    border-radius: 24px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-  }
+  
 </style>
 
 <body>
@@ -304,7 +265,151 @@
       <div class="section-7-down">
         <iframe src="https://www.youtube.com/embed/XHOmBV4js_E" frameborder="0" allowfullscreen></iframe>
     </section>
+
+    <!-- ===  section-8  === -->
+    <section class="section-8">
+      <div class="section-8-left">
+        <h3>Morning Huddles</h3>
+        <p>Urna cursus pretium nisi, ullamcorper enim morbi volutpat feugiat mauris congue integer in velit nunc ac
+          iaculis cursus facilisis tincidunt justo, fringilla scelerisque</p>
+        <hr>
+        <h3>The Basics</h3>
+        <p>Neque in nulla aliquam viverra phasellus ipsum sed pretium imperdiet sit purus at lacus, varius interdum
+          vestibulum fermentum faucibus nulla odio cum</p>
+        <hr>
+        <h3>Play Stations</h3>
+        <p>Eu vestibulum praesent pretium platea fusce amet lobortis ut malesuada neque scelerisque pulvinar quisque
+          turpis ut etiam sit volutpat a scelerisque quis</p>
+      </div>
+      <div class="section-8-right">
+        <h3>Morning Huddles</h3>
+        <p>Urna cursus pretium nisi, ullamcorper enim morbi volutpat feugiat mauris congue integer in velit nunc ac
+          iaculis cursus facilisis tincidunt justo, fringilla scelerisque</p>
+        <hr>
+        <h3>The Basics</h3>
+        <p>Neque in nulla aliquam viverra phasellus ipsum sed pretium imperdiet sit purus at lacus, varius interdum
+          vestibulum fermentum faucibus nulla odio cum</p>
+        <hr>
+        <h3>Play Stations</h3>
+        <p>Eu vestibulum praesent pretium platea fusce amet lobortis ut malesuada neque scelerisque pulvinar quisque
+          turpis ut etiam sit volutpat a scelerisque quis</p>
+      </div>
+    </section>
+
+    <!-- ===  section-9  === -->
+    <section class="section-9">
+      <div class="section-9-up">
+        <b>Meet the teachers</b>
+        <h2>Experts in giving your children best start</h2>
+      </div>
+      <div class="section-9-down">
+        <div class="se-9-down-box">
+          <img src="img/2.png" alt="">
+          <h4>Ella Stark</h4>
+          <p>Lead teacher and 1-2 year olds</p>
+        </div>
+        <div class="se-9-down-box">
+          <img src="img/2.png" alt="">
+          <h4>Ella Stark</h4>
+          <p>Lead teacher and 1-2 year olds</p>
+        </div>
+        <div class="se-9-down-box">
+          <img src="img/2.png" alt="">
+          <h4>Ella Stark</h4>
+          <p>Lead teacher and 1-2 year olds</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- ===  section-10 === -->
+    <section class="section-10">
+      <div class="section-10-up">
+        <hr>
+        <h4>What parent say</h4>
+      </div>
+      <div class="section-10-down">
+        <div class="se-10-down-box1">
+          <img src="img/2.png" alt="">
+        </div>
+        <div class="se-10-box2">
+          <i>''</i>
+          <p>Faucibus nulla tincidunt sagittis faucibus proin habitasse nunc erat sed nisi non pulvinar at ante diam
+            nulla tincidunt lectus maecenas penatibus nam suspendisse cursus risus, ac nibh suspendisse</p>
+          <b>Ramona Altenwerth</b>
+        </div>
+      </div>
+    </section>
+
+  </div> <!--// page-section over \\-->
+  <div class="section-foot">
+    <section class="section-11">
+      <h2>More than just a joyful place</h2>
+      <p>Egestas pulvinar phasellus id odio viverra pharetra congue est eleifend aenean crasEnroll your kid</p>
+      <button>Enroll your kid</button>
+    </section>
   </div>
+  <footer>
+    <section class="footer">
+      <!-- top section -->
+      <div class="footer-up">
+        <!-- left about / social -->
+        <div class="footer-left">
+          <h4>Day Care</h4>
+          <p>
+            Quam quam lacus, amet lorem eu nunc, eget dui libero et faucibus facilisis sed odio suspendisse.
+          </p>
+          <ul class="footer-social">
+            <li><a href="#"><i class="fab fa-youtube"></i> </a></li>
+            <li><a href="#"><i class="fab fa-instagram"></i> </a></li>
+            <li><a href="#"><i class="fab fa-facebook"></i> </a></li>
+            <li><a href="#"><i class="fab fa-twitter"></i> </a></li>
+          </ul>
+        </div>
+
+        <!-- quick links column 1 -->
+        <div class="footer-box-center">
+          <h4>Quick Links</h4>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Admission</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+
+        <!-- quick links column 2 -->
+        <div class="footer-box-center">
+          <h4>Programs</h4>
+          <ul>
+            <li><a href="#">Half Day Care</a></li>
+            <li><a href="#">Full Day Care</a></li>
+            <li><a href="#">Special Events</a></li>
+            <li><a href="#">Activities</a></li>
+          </ul>
+        </div>
+
+        <!-- right contact info -->
+        <div class="footer-right">
+          <h4>Get in touch</h4>
+          <address>
+            Demo St, Brooklyn,<br>
+            NY 11223, United States<br>
+            +1 123-456-7890<br>
+            <a href="mailto:mail@example.com">mail@example.com</a>
+          </address>
+        </div>
+      </div>
+    </section>
+    <hr class="footer-hr">
+    <div class="footer-down">
+      <p>&copy; 2025 Day Care Services. Powered by Day Care Services.</p>
+    </div>
+  </footer>
+
+
+
+
+
 </body>
 
 </html>
