--- a/index.html
+++ b/index.html
@@ -339,6 +339,8 @@
     </section>
 
   </div> <!--// page-section over \\-->
+
+  <!-- ===  section-11 === -->
   <div class="section-foot">
     <section class="section-11">
       <h2>More than just a joyful place</h2>
@@ -346,6 +348,7 @@
       <button>Enroll your kid</button>
     </section>
   </div>
+  <!-- === footer  === -->
   <footer>
     <section class="footer">
       <div class="footer-up">
