--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Delius&family=Dosis:wght@232&family=Outfit:wght@100..900&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="style-1.css">
 </head>
 
 <style>
-  
+
 </style>
 
 <body>
+  <!-- === main page -->
   <section class="section-men" id="home">
     <!--===  header  ===-->
     <header class="header">
@@ -337,7 +338,6 @@
         </div>
       </div>
     </section>
-
   </div> <!--// page-section over \\-->
 
   <!-- ===  section-11 === -->
@@ -348,6 +348,7 @@
       <button>Enroll your kid</button>
     </section>
   </div>
+
   <!-- === footer  === -->
   <footer>
     <section class="footer">
