--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
 
     <!--===  men  ===-->
-    <men class="men">
+    <main class="men">
       <div class="men-left">
         <p>Play. explore. learn.</p>
         <h1>A safe and joyful place for your lovely children</h1>
@@ -66,7 +66,7 @@
         <img class="men-img1" src="img/1.png" alt="">
         <img class="men-img2" src="img/1.png" alt="">
       </div>
-    </men>
+    </main>
   </section>
 
   <!-- ================= #about =================== -->
