--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
   <!-- === main page -->
-  <section class="section-men" id="home">
+  <section class="section-main" id="home">
     <!--===  header  ===-->
     <header class="header">
       <div class="header-left">
@@ -44,8 +44,8 @@
     </header>
 
     <!--===  men  ===-->
-    <main class="men">
-      <div class="men-left">
+    <main class="main">
+      <div class="main-left">
         <p>Play. explore. learn.</p>
         <h1>A safe and joyful place for your lovely children</h1>
         <p>Donec scelerisque neque integer nulla habitant nec sem nam bibendum arcu rhoncus in consequat.</p>
@@ -56,15 +56,15 @@
             <p class="source">4.8 rating on Google</p>
           </div>
         </div>
-        <hr class="men-hr">
+        <hr class="main-hr">
         <a href="tel:1234567890" class="call-link">
           <i class="fa-solid fa-phone"></i>
           (123) 456-7890
         </a>
       </div>
-      <div class="men-right">
-        <img class="men-img1" src="img/1.png" alt="">
-        <img class="men-img2" src="img/1.png" alt="">
+      <div class="main-right">
+        <img class="main-img1" src="img/1.png" alt="">
+        <img class="main-img2" src="img/1.png" alt="">
       </div>
     </main>
   </section>
