--- a/0-CodeCrafters/PG-25/school-p/index.html
+++ b/0-CodeCrafters/PG-25/school-p/index.html
@@ -14,7 +14,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="style-1.css">
+  <!-- <link rel="stylesheet" href="style-1.css"> -->
 </head>
 
 <style>
@@ -405,3 +405,8 @@
 </body>
 
 </html>
+
+
+
+
+se/p-25/school-p/index.html
