--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     href="https://fonts.googleapis.com/css2?family=Delius&family=Dosis:wght@232&family=Outfit:wght@100..900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="style-1.css">
+  <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <style>
@@ -33,7 +32,7 @@
       <div class="header-senter">
         <ul class="header-ul">
           <li><a href="#home">Home</a></li>
-          <li><a href="about.html">About </a></li>
+          <li><a href="About.html">About </a></li>
           <li><a href="Program.html">program</a></li>
           <li><a href="Admission.html">Admission</a></li>
           <li><a href="Contact.html">Admission</a></li>
