--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <li><a href="About.html">About </a></li>
           <li><a href="Program.html">program</a></li>
           <li><a href="Admission.html">Admission</a></li>
-          <li><a href="Contact.html">Admission</a></li>
+          <li><a href="Contact.html">Contact</a></li>
         </ul>
       </div>
       <div class="right">
