--- a/0-CodeCrafters/PG-25/school-p/index.html
+++ b/0-CodeCrafters/PG-25/school-p/index.html
@@ -33,10 +33,10 @@
       <div class="header-senter">
         <ul class="header-ul">
           <li><a href="#home">Home</a></li>
-          <li><a href="about.html">About </a></li>
-          <li><a href="Program.html">program</a></li>
-          <li><a href="Admission.html">Admission</a></li>
-          <li><a href="Contact.html">Admission</a></li>
+          <li><a href="/About.html">About </a></li>
+          <li><a href="/Program.html">program</a></li>
+          <li><a href="/Admission.html">Admission</a></li>
+          <li><a href="/Contact.html">Admission</a></li>
         </ul>
       </div>
       <div class="right">
@@ -64,8 +64,8 @@
         </a>
       </div>
       <div class="main-right">
-        <img class="main-img1" src="img/1.png" alt="">
-        <img class="main-img2" src="img/1.png" alt="">
+        <img class="main-img1" src="/img/1.png" alt="">
+        <img class="main-img2" src="/img/1.png" alt="">
       </div>
     </main>
   </section>
@@ -76,7 +76,7 @@
     <!--=== section-1 - About  ===-->
     <section class="section-1">
       <div class="section-1-left">
-        <img src="img/2.png" alt="">
+        <img src="/img/2.png" alt="">
       </div>
       <div class="section-1-right">
         <b>About us</b>
@@ -94,13 +94,13 @@
     <!-- ===  section-2  === -->
     <section class="section-2">
       <div class="section-2-left">
-        <img class="section-2-img" src="img/1.png" alt="">
+        <img class="section-2-img" src="/img/1.png" alt="">
       </div>
       <div class="section-2-right">
         <i>''</i>
         <h3>Tortor platea nunc lorem morbi pellentesque sed enim viverra venenatis, sem pellentesque massa nunc quis
           lectus.</h3>
-        <img src="img/2.png" alt="" class="signechar-img">
+        <img src="/img/2.png" alt="" class="signechar-img">
         <b>Yolanda Jenkins</b>
         <p>Founder & Head of School</p>
       </div>
@@ -114,19 +114,19 @@
       </div>
       <div class="section-3-down">
         <div class="down-1">
-          <img src="img/1.png" alt="">
+          <img src="/img/1.png" alt="">
           <h3>Infant</h3>
           <p>Blandit auctor felis habitasse aliquet est potenti ut urna eget orci pellentesque commodo vitae in sem</p>
           <a href="">Learn more</a>
         </div>
         <div class="down-2">
-          <img src="img/1.png" alt="">
+          <img src="/img/1.png" alt="">
           <h3>Infant</h3>
           <p>Blandit auctor felis habitasse aliquet est potenti ut urna eget orci pellentesque commodo vitae in sem</p>
           <a href="">Learn more</a>
         </div>
         <div class="down-3">
-          <img src="img/1.png" alt="">
+          <img src="/img/1.png" alt="">
           <h3>Infant</h3>
           <p>Blandit auctor felis habitasse aliquet est potenti ut urna eget orci pellentesque commodo vitae in sem</p>
           <a href="">Learn more</a>
@@ -245,14 +245,14 @@
     <!-- ===  section-6  === -->
     <section class="section-6">
       <div class="section-6-up">
-        <img class="img-up-1" src="img/1.png" alt="">
-        <img class="img-up-2" src="img/2.png" alt="">
-        <img class="img-up-2" src="img/2.png" alt="">
+        <img class="img-up-1" src="/img/1.png" alt="">
+        <img class="img-up-2" src="/img/2.png" alt="">
+        <img class="img-up-2" src="/img/2.png" alt="">
       </div>
       <div class="section-6-down">
-        <img class="img-down-2" src="img/2.png" alt="">
-        <img class="img-down-2" src="img/2.png" alt="">
-        <img class="img-down-1" src="img/1.png" alt="">
+        <img class="img-down-2" src="/img/2.png" alt="">
+        <img class="img-down-2" src="/img/2.png" alt="">
+        <img class="img-down-1" src="/img/1.png" alt="">
       </div>
     </section>
 
@@ -304,17 +304,17 @@
       </div>
       <div class="section-9-down">
         <div class="se-9-down-box">
-          <img src="img/2.png" alt="">
+          <img src="/img/2.png" alt="">
           <h4>Ella Stark</h4>
           <p>Lead teacher and 1-2 year olds</p>
         </div>
         <div class="se-9-down-box">
-          <img src="img/2.png" alt="">
+          <img src="/img/2.png" alt="">
           <h4>Ella Stark</h4>
           <p>Lead teacher and 1-2 year olds</p>
         </div>
         <div class="se-9-down-box">
-          <img src="img/2.png" alt="">
+          <img src="/img/2.png" alt="">
           <h4>Ella Stark</h4>
           <p>Lead teacher and 1-2 year olds</p>
         </div>
@@ -329,7 +329,7 @@
       </div>
       <div class="section-10-down">
         <div class="se-10-down-box1">
-          <img src="img/2.png" alt="">
+          <img src="/img/2.png" alt="">
         </div>
         <div class="se-10-box2">
           <i>''</i>
@@ -407,6 +407,3 @@
 </html>
 
 
-
-
-se/p-25/school-p/index.html
