--- a/Program.html
+++ b/Program.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Program-Page</title>
+    <link rel="stylesheet" href="CSS/all-im.css">
     <link rel="stylesheet" href="CSS/program.css">
 </head>
+
 <body>
-    <h1>Program-Page</h1>
+    <!-- === main page -->
+    <section class="section-main" id="home">
+
+        <!--=== header  ===-->
+        <header class="header">
+            <div class="header-left">
+                <h2 class="header-h2">School Name</h2>
+            </div>
+
+            <div class="menu-toggle" id="menuToggle">
+                ☰
+            </div>
+
+            <div class="header-senter" id="headerMenu">
+                <ul class="header-ul">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="About.html">About</a></li>
+                    <li><a href="Program.html">Program</a></li>
+                    <li><a href="Admission.html">Admission</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
+                </ul>
+            </div>
+
+            <div class="right">
+                <button class="header-button" type="submit">Enroll now</button>
+            </div>
+        </header>
+
+        <!--  -->
+</section>
+
 </body>
+<script src="/JS/script.js"></script>
+
 </html>
