--- a/Program.html
+++ b/Program.html
@@ -38,8 +38,88 @@
             </div>
         </header>
 
-        <!--  -->
-</section>
+        <!--===  men  ===-->
+        <main class="main">
+
+        </main>
+    </section>
+    <!--======= page-section ===========   -->
+    <div class="page-section" id="about">
+
+        <!--=== section-1  ===-->
+        <section class="section-1">
+
+        </section>
+
+        <!--=== section-2  ===-->
+        <section class="section-2">
+
+        </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </div><!--\\\\\\ page-section ////-->
+    <!-- === footer  === -->
+    <footer>
+        <section class="footer">
+            <div class="footer-up">
+                <div class="footer-left">
+                    <h4>Day Care</h4>
+                    <p>
+                        Quam quam lacus, amet lorem eu nunc, eget dui libero et faucibus facilisis sed odio suspendisse.
+                    </p>
+                    <ul class="footer-social">
+                        <li><a href="#"><i class="fab fa-youtube"></i> </a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i> </a></li>
+                        <li><a href="#"><i class="fab fa-facebook"></i> </a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i> </a></li>
+                    </ul>
+                </div>
+                <div class="footer-box-center">
+                    <h4>Quick Links</h4>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Admission</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-box-center">
+                    <h4>Programs</h4>
+                    <ul>
+                        <li><a href="#">Half Day Care</a></li>
+                        <li><a href="#">Full Day Care</a></li>
+                        <li><a href="#">Special Events</a></li>
+                        <li><a href="#">Activities</a></li>
+                    </ul>
+                </div>
+                <div class="footer-right">
+                    <h4>Get in touch</h4>
+                    <address>
+                        Demo St, Brooklyn,<br>
+                        NY 11223, United States<br>
+                        +1 123-456-7890<br>
+                        <a href="mailto:mail@example.com">mail@example.com</a>
+                    </address>
+                </div>
+            </div>
+        </section>
+        <hr class="footer-hr">
+        <div class="footer-down">
+            <p>&copy; 2025 Day Care Services. Powered by Day Care Services.</p>
+        </div>
+    </footer>
 
 </body>
 <script src="/JS/script.js"></script>
