--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="CSS/all-im.css">
 </head>
 
 <style>
@@ -25,23 +26,29 @@
   <!-- === main page -->
   <section class="section-main" id="home">
     <!--===  header  ===-->
-    <header class="header">
-      <div class="header-left">
-        <h2 class="header-h2">School Name</h2>
-      </div>
-      <div class="header-senter">
-        <ul class="header-ul">
-          <li><a href="#home">Home</a></li>
-          <li><a href="About.html">About </a></li>
-          <li><a href="Program.html">program</a></li>
-          <li><a href="Admission.html">Admission</a></li>
-          <li><a href="Contact.html">Contact</a></li>
-        </ul>
-      </div>
-      <div class="right">
-        <button class="header-button" type="submit">Enroll now</button>
-      </div>
-    </header>
+     <header class="header">
+            <div class="header-left">
+                <h2 class="header-h2">School Name</h2>
+            </div>
+
+            <div class="menu-toggle" id="menuToggle">
+                ☰
+            </div>
+
+            <div class="header-senter" id="headerMenu">
+                <ul class="header-ul">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="About.html">About</a></li>
+                    <li><a href="Program.html">Program</a></li>
+                    <li><a href="Admission.html">Admission</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
+                </ul>
+            </div>
+
+            <div class="right">
+                <button class="header-button" type="submit">Enroll now</button>
+            </div>
+        </header>
 
     <!--===  men  ===-->
     <main class="main">
@@ -402,5 +409,5 @@
 
 
 </body>
-
+  <script src="/JS/script.js"></script>
 </html>
