--- a/Contact.html
+++ b/Contact.html
@@ -1,12 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact-Page</title>
-    <link rel="stylesheet" href="CSS/contact.css">
+    <link rel="stylesheet" href="CSS/all-im.css">
+    <link rel="stylesheet" href="CSS/program.css">
 </head>
+
 <body>
-    <h1>Contact-Page</h1>
+    <!-- === main page -->
+    <section class="section-main" id="home">
+
+        <!--=== header  ===-->
+        <header class="header">
+            <div class="header-left">
+                <h2 class="header-h2">School Name</h2>
+            </div>
+
+            <div class="menu-toggle" id="menuToggle">
+                ☰
+            </div>
+
+            <div class="header-senter" id="headerMenu">
+                <ul class="header-ul">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="About.html">About</a></li>
+                    <li><a href="Program.html">Program</a></li>
+                    <li><a href="Admission.html">Admission</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
+                </ul>
+            </div>
+
+            <div class="right">
+                <button class="header-button" type="submit">Enroll now</button>
+            </div>
+        </header>
+
+        <!--===  men  ===-->
+        <main class="main">
+
+        </main>
+    </section>
+    <!--======= page-section ===========   -->
+    <div class="page-section" id="about">
+
+        <!--=== section-1  ===-->
+        <section class="section-1">
+
+        </section>
+
+        <!--=== section-2  ===-->
+        <section class="section-2">
+
+        </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </div><!--\\\\\\ page-section ////-->
+    <!-- === footer  === -->
+    <footer>
+        <section class="footer">
+            <div class="footer-up">
+                <div class="footer-left">
+                    <h4>Day Care</h4>
+                    <p>
+                        Quam quam lacus, amet lorem eu nunc, eget dui libero et faucibus facilisis sed odio suspendisse.
+                    </p>
+                    <ul class="footer-social">
+                        <li><a href="#"><i class="fab fa-youtube"></i> </a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i> </a></li>
+                        <li><a href="#"><i class="fab fa-facebook"></i> </a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i> </a></li>
+                    </ul>
+                </div>
+                <div class="footer-box-center">
+                    <h4>Quick Links</h4>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Admission</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-box-center">
+                    <h4>Programs</h4>
+                    <ul>
+                        <li><a href="#">Half Day Care</a></li>
+                        <li><a href="#">Full Day Care</a></li>
+                        <li><a href="#">Special Events</a></li>
+                        <li><a href="#">Activities</a></li>
+                    </ul>
+                </div>
+                <div class="footer-right">
+                    <h4>Get in touch</h4>
+                    <address>
+                        Demo St, Brooklyn,<br>
+                        NY 11223, United States<br>
+                        +1 123-456-7890<br>
+                        <a href="mailto:mail@example.com">mail@example.com</a>
+                    </address>
+                </div>
+            </div>
+        </section>
+        <hr class="footer-hr">
+        <div class="footer-down">
+            <p>&copy; 2025 Day Care Services. Powered by Day Care Services.</p>
+        </div>
+    </footer>
+
 </body>
+<script src="/JS/script.js"></script>
+
 </html>
