--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Program-Page</title>
+    <title>About-Page</title>
     <link rel="stylesheet" href="CSS/all-im.css">
     <link rel="stylesheet" href="CSS/program.css">
 </head>
@@ -25,11 +25,11 @@
 
             <div class="header-senter" id="headerMenu">
                 <ul class="header-ul">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="About.html">About</a></li>
-                    <li><a href="Program.html">Program</a></li>
-                    <li><a href="Admission.html">Admission</a></li>
-                    <li><a href="Contact.html">Contact</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="#About.html">About</a></li>
+                    <li><a href="/Program.html">Program</a></li>
+                    <li><a href="/Admission.html">Admission</a></li>
+                    <li><a href="/Contact.html">Contact</a></li>
                 </ul>
             </div>
 
