--- a/Contact.html
+++ b/Contact.html
@@ -25,11 +25,11 @@
 
             <div class="header-senter" id="headerMenu">
                 <ul class="header-ul">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="About.html">About</a></li>
-                    <li><a href="Program.html">Program</a></li>
-                    <li><a href="Admission.html">Admission</a></li>
-                    <li><a href="Contact.html">Contact</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/About.html">About</a></li>
+                    <li><a href="/Program.html">Program</a></li>
+                    <li><a href="/Admission.html">Admission</a></li>
+                    <li><a href="#Contact.html">Contact</a></li>
                 </ul>
             </div>
 
